2013-04-19  Carl Hetherington  <cth@carlh.net>

	* Version 0.84beta4 released.

2013-04-19  Carl Hetherington  <cth@carlh.net>

	* Version 0.84beta3 released.

2013-04-19  Carl Hetherington  <cth@carlh.net>

	* Version 0.84beta2 released.

2013-04-18  Carl Hetherington  <cth@carlh.net>

	* Version 0.84beta1 released.

2013-04-15  Carl Hetherington  <cth@carlh.net>

	* Fix error message on forcing language to English (#103).

	* Fix problems with content whose first audio content
	comes before the first video (resulting in audio being
	chopped off at the start of the DCP) (#79).

	* Use true 4:3 rather than 1.33.

2013-04-13  Carl Hetherington  <cth@carlh.net>

	* Use film-name-derived names for MXFs in DCPs (#54).

2013-04-10  Carl Hetherington  <cth@carlh.net>

	* Version 0.83 released.

2013-04-10  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect scaling using flat-no-stretch and scope-no-stretch
	when the source is cropped (part of #113).

	* Fix incorrect display of padded films (rest of #113).

2013-04-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.82 released.

2013-04-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.82beta1 released.

2013-04-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.81 released.

2013-04-09  Carl Hetherington  <cth@carlh.net>

	* Version 0.81beta1 released.

2013-04-08  Carl Hetherington  <cth@carlh.net>

	* Add 16:9-within-Scope format.

2013-04-07  Carl Hetherington  <cth@carlh.net>

	* Version 0.80 released.

2013-04-07  Carl Hetherington  <cth@carlh.net>

	* Version 0.80beta4 released.

2013-04-07  Carl Hetherington  <cth@carlh.net>

	* Version 0.80beta3 released.

2013-04-07  Carl Hetherington  <cth@carlh.net>

	* Version 0.80beta2 released.

2013-04-07  Carl Hetherington  <cth@carlh.net>

	* Version 0.80beta1 released.

2013-04-07  Carl Hetherington  <cth@carlh.net>

	* Make the audio plot expand in height when its
	window is enlarged.

	* Label subtitle offset with "pixels" (#101).
